gitops/apps/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
