gitops/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: web
      appProtocol: kubernetes.io/wss
  selector:
    app: vaultwarden
